src/routes/About/style.scss
@import 'sass-includes';

.about--header {
  z-index: 7;
  position: absolute;
  // bottom: 5rem;
  padding: 0;
  animation-duration: 1s;
  animation-name: slidein;
  left: 0;
  // @include breakpoint($tablet-lg) {
  //   bottom: 15%;
  // }
  // @include breakpoint($mobile-lg) {
  //   display: flex;
  //   flex-direction: column;
  //   justify-content: center;
  //   height: 100vh;
  //   bottom: 0;
  // }
  @media screen and (max-device-width: 1040px) and (orientation : landscape) {
    width: 50%;
    margin-left: 0;
  }
}

.about--title {
  background-color: white;
  padding-top: 5rem;
  padding-bottom: 5rem;
  width: 50%;
  position: absolute;
  bottom: -22rem;
  // media queries
  @include breakpoint($desktop-lg) {
    width: 65%
  }

  @include breakpoint($tablet-lg) {
    position: relative;
    bottom: 0;
    padding-top: 2rem;
    padding-bottom: 2rem;
    width: 100%;
  }

  @include breakpoint($mobile-lg) {
    padding-top: 1rem;
  }
}

.about--slideshow {
  position: relative;
  padding-bottom: 10rem;
  @include breakpoint($tablet-lg) {
    padding-bottom: 15rem;
  }
}

.about__hybrid--header {
  position: absolute;
  bottom: 0;
  @include breakpoint($mobile-lg) {
    position: relative;
    padding-top: 6rem;
  }
  // position: absolute;
  // bottom: 0;
  // @include breakpoint($mobile-lg) {
  //   width: 90%;
  // }
}

.about--transition {
  transition: all 0.4s ease-in;
}

// .about__clients {
//   background: $dark-grey;
// }

.about section {
  position: relative;
}

.about__clients {
  padding-top: 20.6rem;
  h1 {
    text-align: center;
    @include breakpoint($mobile-lg) {
      text-align: left;
    }
  }
  @include breakpoint($mobile-lg) {
    padding-top: 8.6rem;
  }
}

// .about--clients h2 {
//   width: 69%;
//   // media queries
//   @include breakpoint($mobile-lg) {
//     width: 100%;
//   }
// }

// Team
.about {
  .modal__close {
    @extend %page-margins;
    right: 0;
    text-align: right;

    .icon-close {
      color: $body;
      left: 0;
    }
  }
}

.team-member__modal {
  background-repeat: no-repeat;
  background-position: right;
  background-color: $white;
  top: 0;
  bottom: 0;
  position: absolute;
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  // media queries
  @include breakpoint($mobile-lg) {
    width: 100%;
    overflow-y: scroll;
  }
}

.about--team {
  img {
    display: block;
  }

  .team-member {
    position: relative;
    overflow: hidden;
    height: auto;
    cursor: pointer;
  }

  .member__name {
    line-height: 1.2;
    margin-bottom: 1rem;
  }

  .member__position {
    padding-right: 5rem;
  }

  .member__name,
  .member__position {
    @include font-size(h4);
    width: 100%;
    display: block;
  }

  h2 {
    line-height: 1.2;
    padding-bottom: 0.5rem;
    // media queries
    @include breakpoint($mobile-lg) {
      line-height: 1.45;
    }

    @include breakpoint($mobile-sm) {
      line-height: 1.2;
      padding: 0;
    }
  }

  h4 {
    line-height: 1.333;
    // media queries
    @include breakpoint($mobile-sm) {
      line-height: 1.1;
      padding: 0;
    }
  }

  h2,
  h4 {
    // media queries
    @include breakpoint($mobile-lg) {
      font-size: 2.496rem;
    }
    @include breakpoint($mobile-sm) {
      font-size: 2rem;
    }
  }

  .quarter-width {
    //media queries
    @include breakpoint($tablet-md) {
      width: 50%;
    }
  }
}

.team-member-bio {
  position: relative;
  z-index: 9;
  width: 50%;
  // media queries
  @include breakpoint($tablet-md) {
    width: 100%;
  }

  @include breakpoint($mobile-lg) {
    transform: none;
    top: 5rem;
  }

  h2 {
    text-transform: lowercase;
    // media queries
    @include breakpoint($desktop-lg) {
      font-size: 3.6rem;
    }

    @include breakpoint($mobile-lg) {
      font-size: 2.8rem;
      line-height: 1.65;
    }
  }

  h5 {
    background-color: #fff;
    // media queries
    @include breakpoint($desktop-lg) {
      font-size: 2.1rem;
    }

    @include breakpoint($mobile-lg) {
      font-size: 1.4rem;
    }
  }
}

.bio--wrap {
  height: 100%;
  display: flex;
  align-items: center;
  // media queries
  @media screen and (max-height: 680px) {
    align-items: flex-start;
    height: auto;
  }
  @include breakpoint($tablet-md) {
    position: relative;
  }
}

.bio--wrap__img {
  height: 100%;
  text-align: center;
  img {
    height: 100%;
    width: auto;
    position: absolute;
    @media screen and (max-height: 680px) {
      min-height: 67.5rem;
    }
  }
}

.about .modal__wrap .icon-close {
  left: -1rem;
  &:before {
    background-color: #ffffff;
    border-radius: 50%;
    padding: 1rem;
  }
}

